test/subjects/errors/prepostop_error2.php
<?php
	++f(); // { phc-error: Variable name expected }
?>
